force-app/main/default/objects/AusenciaTerritorioServico__c/AusenciaTerritorioServico__c.object-meta.xml
<CustomObject>
    <description>Objeto utilizado para armazenar ausências, vinculadas a um ou mais territórios, impossibilitando agendamentos nestes dias.</description>
    <label>Ausência de Território de Serviço</label>
    <nameField>
        <displayFormat>ATS-{000000}</displayFormat>
        <label>Número da Ausência</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ausências de Território de Serviço</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>