force-app/main/default/objects/AusenciaTerritorioServico__c/fields/DataHorarioInicio__c.field-meta.xml
<CustomField>
    <fullName>DataHorarioInicio__c</fullName>
    <description>Data e Horário quando a ausência se aplica ao calendário dos colaboradores</description>
    <label>Data/Horario de Início</label>
    <type>DateTime</type>
</CustomField>