force-app/main/default/objects/AusenciaTerritorioServico__c/fields/DataHorarioTermino__c.field-meta.xml
<CustomField>
    <fullName>DataHorarioTermino__c</fullName>
    <description>Data e Horário quando se encerra a suspensão na agenda dos colaboradores</description>
    <label>Data/Horario de Término</label>
    <type>DateTime</type>
</CustomField>