force-app/main/default/objects/AusenciaTerritorioServico__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <inlineHelpText>Informe o nome do feriado.</inlineHelpText>
    <label>Descrição</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>