force-app/main/default/objects/AusenciaTerritorioServico__c/fields/ServiceTerritoryId__c.field-meta.xml
<CustomField>
    <fullName>ServiceTerritoryId__c</fullName>
    <label>Território de serviço</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Ausências</relationshipLabel>
    <relationshipName>AusenciasTerritorioServico</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>