force-app/main/default/objects/AusenciaTerritorioServico__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Feriado Municipal</fullName>
            </value>
            <value>
                <fullName>Feriado Estadual</fullName>
            </value>
            <value>
                <fullName>Feriado Nacional</fullName>
            </value>
            <value>
                <fullName>Ponto Facultativo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>