force-app/main/default/objects/AusenciaTerritorioServico__c/validationRules/ImpedeDataPassado.validationRule-meta.xml
<ValidationRule>
    <fullName>ImpedeDataPassado</fullName>
    <active>true</active>
    <description>Obriga que a data de término seja maior do que a data de FIm</description>
    <errorConditionFormula>DataHorarioInicio__c  &gt; DataHorarioTermino__c</errorConditionFormula>
    <errorMessage>A Data de término não pode ser anterior à data de Início</errorMessage>
</ValidationRule>